# mald

./: CMakeLists.txt
src/: main.cpp
